# WLED

./: .gitignore  CMakeLists.txt  partitions.csv  partitions_16mb.csv  porting.md  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.cpp
wled00/: bus_manager.cpp  bus_wrapper.h  cfg.cpp  const.h  fcn_declare.h  network.cpp  util.cpp  wled.cpp  wled.h  wled_ethernet.h  xml.cpp
wled00/data/: settings_wifi.htm
wled00/src/dependencies/e131/: ESPAsyncE131.cpp
wled00/src/dependencies/espalexa/: Espalexa.h
wled00/src/dependencies/network/: WLEDNetwork.cpp  WLEDNetwork.h
wled00/src/dependencies/spiffseditor/: SPIFFSEditor.h
